--- a/res/layout-land/activity_game.xml
+++ b/res/layout-land/activity_game.xml
@@ -134,15 +134,17 @@
             android:layout_height="wrap_content"
             android:layout_weight="1" />
         
-
         <Button
             android:id="@+id/playerTileTemp"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
-            android:layout_marginRight="4dp"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="6dp"
+            android:layout_marginRight="6dp"
+            android:layout_marginTop="5dp"
             android:layout_weight="1"
             android:text="t" />
+
     </LinearLayout>
 
     <LinearLayout
