--- a/res/layout-land/activity_game.xml
+++ b/res/layout-land/activity_game.xml
@@ -536,11 +536,13 @@
 
         </RelativeLayout>
         
-        <LinearLayout
+        <RelativeLayout
             android:id="@+id/botDiscard2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
+            android:layout_toLeftOf="@+id/botDiscard1"
+            android:layout_toRightOf="@+id/botDiscard3"
             android:layout_marginBottom="3dp"
             android:background="@color/light_green" >
 
@@ -550,7 +552,7 @@
                 android:layout_height="wrap_content"
                 android:text="Button" />
 
-        </LinearLayout>
+        </RelativeLayout>
 
         <RelativeLayout
             android:id="@+id/botDiscard1"
